# SWADP

./: .gitignore  README.md
opdracht1/: CMakeLists.txt  Positie.cpp  Positie.h  Robot.cpp  Robot.h  beweeg.h  main.cpp
opdracht2/: AnalogeMeter.cpp  AnalogeMeter.h  Auto.cpp  Auto.h  CMakeLists.txt  DigitaleMeter.cpp  DigitaleMeter.h  Observer.cpp  Observer.h  Snelheid.cpp  Snelheid.h  main.cpp
opdracht3/: CMakeLists.txt  main.cpp
opdracht4/: CMakeLists.txt  Machine.h  MachineIMP.cpp  MachineIMP.h  Mone.h  MoneIMP.cpp  MoneIMP.h  Motor.h  Mtwo.h  MtwoIMP.cpp  MtwoIMP.h  Observer.h  Sensor.h  SensorIMP.cpp  SensorIMP.h  ToonT.cpp  ToonT.h  main.cpp
